--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <meta http-equiv="refresh" content="15">
     <meta name="author" content="PJ Dev" />
     <meta name="description" content="Hey, Hope we all have fun Learning front-end web development skill -- HTML" />
     <link rel="stylesheet" href="main.css" />
