--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <meta http-equiv="refresh" content="15">
+    <title>Homepage - Learn HTML With PJ Dev</title>
     <meta name="author" content="PJ Dev" />
     <meta name="description" content="Hey, Hope we all have fun Learning front-end web development skill -- HTML" />
     <link rel="stylesheet" href="main.css" />
 </head>
 <body>
     <header>
-        <script async="async" data-cfasync="false" src="//pl17847398.profitablegatecpm.com/0cbbaae8d4dc6661edce089b9c68a24b/invoke.js"></script>
-        <div id="container-0cbbaae8d4dc6661edce089b9c68a24b"></div>
+        
         <h1>Learn HTML With PJ Dev</h1>
         <ul>
-            <li>Home</li>
-            <li>Learn HTML</li>
-            <li>About</li>
-            <li>Contact</li>
+            <a href="index.html">
+                <li>Home</li>
+            </a>
+            <a href="learnhtml.html">
+                <li>Learn HTML</li>
+            </a>
+            <a href="about.html">
+                <li>About</li>
+            </a>
+            <a href="contact.html">
+                <li>Contact</li>
+            </a>
         </ul>
     </header>
     <hr />
@@ -28,15 +34,21 @@
         </aside>
         <aside>
             <ul>
-                <li>Introduction</li>
-                <li>Course Content</li>
-                <li>Pros & Crons</li>
-                <li>Support</li>
+                <a href="#introduction">
+                    <li>Introduction</li>
+                </a>
+                <a href="#coursecontent"> 
+                    <li>Course Content</li>
+                </a>
+                <a href="#proscrons">
+                    <li>Pros & Crons</li>
+                </a>
+                <a href="#support">
+                    <li>Support</li>
+                </a>
             </ul>
         </aside>
-        <h2>Introduction</h2>
-        <iframe src="frame1.html" border="none" resize="no-resize">
-        </iframe>
+        <h2 id="introduction">Introduction</h2>
         <p>
             Hello Everyone, Folks, and Probably all. Welcome to official PJ Dev tutorial on <strong>Web Development</strong>. 
 
@@ -45,7 +57,7 @@
         <p>
             Also, In case some of the code examples are not working, You can kindly message us... Or in case you spotted an error or mistake (probably if your also a developer taking part in the course). If you also want to contribute  into teaching others, you can join the collaborators on the official <dfn title="The official Github is A FLOSS Project --- Anyone can contribute"> Github Account</dfn>
         </p>
-        <h2>Course Content</h2>
+        <h2 id="coursecontent">Course Content</h2>
         <p>Hello Learners, This is an ongoing course... and we're so glad to have you here. The course content will be listed below in a table form. Feel free to learn at your convenient. And Happy Learning</p>
         <details>
             <summary>View Course Content</summary>
@@ -55,7 +67,7 @@
                     <th class="headingTable">Content</th>
                 </tr>
                 <tr>
-                    <th>HTML Overview</th>
+                    <th><a href="lesson%201/index.html"> HTML Overview </a></th>
                     <td>This chapter focuses on what the course content is all about, What to learn, and Pre-requisite to learn HTML. This is sometimes referred to as <strong>Lesson 0</strong>.</td>
                 </tr>
                 <tr>
@@ -85,32 +97,41 @@
 
             </table>
         </details>
-        <h2>Pros & Crons</h2>
+        <h2 id="proscons">Pros & Cons</h2>
         <p>
             The advantages of taking part in this course is that , <i>It's free, And contain varieties of example.</i>
-            When it comes to coding / programming we all learn more by doing. 
+            When it comes to coding&nbsp;/&nbsp;programming we all learn more by doing. 
         </p>
         <p>
             The disadvantages is , <i>This course is an online and of course that require internet connection</i>, also, <i>The course might not cover everything about <strong>HTML</strong></i>.
         </p>
-        <h2>Support</h2>
+        <h2 id="support">Support</h2>
         <p>
-            Hello there, Folks. You can kindly support us by  contributing to the tutorials (if you have existing knowlegde about HTML) or Simply by donating. Thanks alot. You can find more ways to support on the <strong>Support Page</strong>
+            Hello there, Folks. You can kindly support us by  contributing to the tutorials (if you have existing knowlegde about HTML) or Simply by donating. Thanks alot. You can find more ways to support on the <a href="support.html"> <strong>Support Page</strong> </a>
         </p>
     </main>
-    <script async="async" data-cfasync="false" src="//pl21535990.profitablegatecpm.com/403c3594e0cb503d574d6bdc8503d8ef/invoke.js"></script>
-    <div id="container-403c3594e0cb503d574d6bdc8503d8ef"></div>
     <hr style="margin-bottom: 0;" />
     <footer>
         <ul>
-            <li>Home</li>
-            <li>Contact</li>
-            <li>Support</li>
-            <li>About</li>
-            <li>Sitemaps</li>
-            <li>Source Code</li>
+            <a href="index.html">
+                <li>Home</li>
+            </a>
+            <a href="contact.html">
+                <li>Contact</li>
+            </a>
+            <a href="support.html">
+                <li>Support</li>
+            </a>
+            <a href="about.html">
+                <li>About</li>
+            </a>
+            <a href="sitemaps.html">
+                <li>Sitemaps</li>
+            </a>
+            <a href="sourcegit.html">
+                <li>Source Code</li>
+            </a>
         </ul>
     </footer>
-    <script type='text/javascript' src='//pl21540653.profitablegatecpm.com/69/ea/d1/69ead1bca84f99bbeffc358d2c484d0b.js'></script>
 </body>
 </html>
