Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   lesson 1/index.html

--- a/lesson 1/index.html
+++ b/lesson 1/index.html
@@ -33,6 +33,7 @@
             <ul>
                 <a href="#overview"><li>Course Overview</li></a><br>
                 <a href="#content"><li>Main Content</li></a>
+                <a href="#project"><li>Main Content</li></a>
             </ul>
         </aside>
         <h2 id="overview">Course Overview</h2>
@@ -95,7 +96,7 @@
         </p>
 
         <button id="takeQuiz">Take Quiz</button>
-        <h2>Project</h2>
+        <h2 id="project">Project</h2>
         <p>No project. But we'll like to know your favorite text editors... (drop it to our Official WhatsApp Group)</p>
         <button class="btn">Prev Lesson</button>
         <button class="btn">Next Lesson</button>
