--- a/lesson 1/index.html
+++ b/lesson 1/index.html
@@ -33,7 +33,7 @@
             <ul>
                 <a href="#overview"><li>Course Overview</li></a><br>
                 <a href="#content"><li>Main Content</li></a>
-                <a href="#project"><li>Main Content</li></a>
+                <a href="#project"><li>Project</li></a>
             </ul>
         </aside>
         <h2 id="overview">Course Overview</h2>
