--- a/lesson 1/index.html
+++ b/lesson 1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Lesson 1 - HTML Overview</title>
     <meta name="author" content="PJ Dev" />
     <meta name="description" content="Hey, Hope we all have fun Learning front-end web development skill -- HTML" />
     <link rel="stylesheet" href="main.css" />
@@ -83,7 +83,7 @@
             </dd>
         </dl>
         <p>
-            I hope the above list help clarifies the editors available, and hopefully you've picked one (if you're familiar with a code editor please kindly use it 😊). I'll be using VS Code throughout the tutorial series. You can download it for <a href="" target="_blank">free here</a>
+            I hope the above list help clarifies the editors available, and hopefully you've picked one (if you're familiar with a code editor please kindly use it 😊). I'll be using VS Code throughout the tutorial series. You can download it for <a href="https://code.visualstudio.com" target="_blank">free here</a>
         </p>
         <fieldset>
             <legend>Note: </legend>
