--- a/lesson 1/index.html
+++ b/lesson 1/index.html
@@ -37,8 +37,7 @@
             </ul>
         </aside>
         <h2 id="overview">Course Overview</h2>
-
-
+        <p>Lesson 0 describes what this course is all about, what you need (web broswer, softwares e.t.c) and lot more... find out more below. And hopefully we all enjoy it. </p>
         <h2 id="content">Main Content</h2>
 
         <p>
@@ -78,7 +77,7 @@
                     <li>VS Code: <small>Visual Studio Code is a lightweight program editor. It is lightweight but very powerful program editor. It also allows you to add extensions (more functionality) from </small> <big>Extension Store.</big></li>
                     <li>Sublime Text: <small>Sublime Text is another free option out there. It's been out for long time, and still powerful till date. It is widely used by professional programmers. </small></li>
                     <li>Intellij Ide: <small>Although not free, this is a very powerful program editor. It includes so many features and it can be used for other cool stuff apart from web development. It has a free version online (mainly created for students) .</small></li>
-                    <p>Other editors include, Notepad, Notepad++, Visual Studio e.t.c.</p>
+                    <p>Other editors include, Notepad++, Visual Studio e.t.c.</p>
                 </ol>
             </dd>
         </dl>
