--- a/lesson 1/index.html
+++ b/lesson 1/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lesson 1 - HTML Overview</title>
+    <title>Lesson 0 - HTML Overview</title>
     <meta name="author" content="PJ Dev" />
     <meta name="description" content="Hey, Hope we all have fun Learning front-end web development skill -- HTML" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="../mainLesson.css" />
     <link rel="stylesheet" href="../lessonStyle.css" />
 </head>
 <body>
