--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="PJ Dev" />
     <meta name="description" content="Hey, Hope we all have fun Learning front-end web development skill -- HTML" />
     <link rel="stylesheet" href="main.css" />
+    <meta name="google-site-verification" content="xPAKinW3xOZENw4UcNMtSRNyVgVgRHt-Fgp2z66Iq24" />
     <style>
         #container{
             width: 100%;
