--- a/index.html
+++ b/index.html
@@ -97,5 +97,6 @@
             </a>
         </ul>
     </footer>
+    <script type='text/javascript' src='//pl24106250.profitablecpmrate.com/b3/4b/16/b34b163f80dc94828ab604d9f70c4c33.js'></script>
 </body>
 </html>
